Revert "fix: dont truncate hero size"

--- a/src/components/HomepageHeader/index.module.css
+++ b/src/components/HomepageHeader/index.module.css
@@ -3,6 +3,7 @@
 }
 
 .heroBanner {
+  height: calc(100vh - var(--ifm-navbar-height));
   padding: 0 20px;
   overflow: hidden;
   text-align: center;
